begin detail page: click working but ui not done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:theme="@style/Theme.CocktailApp"
         tools:targetApi="31">
         <activity
+            android:name=".ActivityCocktailDetail"
+            android:exported="false"
+            android:theme="@style/Theme.CocktailApp" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
