--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             android:theme="@style/Theme.CocktailApp" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.CocktailApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
